Transactions:empty transaction we1